--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "dev": "tsc -w",
     "clean": "del-cli android/build ios/build lib",
     "prepare": "bob build",
+    "postinstall": "node scripts/download-rgb-lib-ios.js",
     "typecheck": "tsc",
+    "codegen": "mkdir -p android/build/generated/source/codegen && node node_modules/@react-native/codegen/lib/cli/combine/combine-js-to-schema-cli.js android/build/generated/source/codegen/schema.json src/NativeRgb.ts && node node_modules/@react-native/codegen/lib/cli/generators/generate-all.js android/build/generated/source/codegen/schema.json RgbSpec android/build/generated/source/codegen com.rgb",
     "build": "bob build",
     "build:watch": "tsc -w",
     "version:patch": "npm version patch && git push && git push --tags && npm publish --access public",
