--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rgb-sdk-rn",
-  "version": "1.0.1",
+  "name": "@utexo/rgb-sdk-rn",
+  "version": "1.0.0-beta.1",
   "description": "React Native SDK for Bitcoin RGB Protocol",
   "main": "./lib/module/index.js",
   "types": "./lib/typescript/src/index.d.ts",
@@ -49,7 +49,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/RGB-OS/rgb-sdk-rn.git"
+    "url": "https://github.com/UTEXO-Protocol/rgb-sdk-rn.git"
   },
   "keywords": [
     "rgb",
